[project]
name = "codeflash-demo"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alok Singh", email = "alokbeniwal@gmail.com" }
]
dependencies = [
    "codeflash>=0.6.17",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/codeflash_demo"]

[tool.codeflash]
# All paths are relative to this pyproject.toml's directory.
module-root = "src"
tests-root = "tests"
test-framework = "pytest"
ignore-paths = []
formatter-cmds = ["black $file"]
